@@ -173,7 +173,7 @@ render_self (CongEditorArea *area,
 	gtk_paint_expander (gtk_widget_get_style (GTK_WIDGET(cong_editor_area_get_widget (area))),
 			    window,			    
 			    cong_editor_area_get_state (area),
-			    widget_rect,
+			    (GdkRectangle*)widget_rect,
 			    GTK_WIDGET (cong_editor_area_get_widget (area)),
 			    NULL,
 			    rect->x+(rect->width/2),
