@@ -1,3 +1,9 @@
+2003-12-17  David Malcolm <david@davemalcolm.demon.co.uk>
+
+	* cong-attribute-editor-enumeration.c, cong-attribute-editor.c, cong-dispspec-element.c, cong-editor-area-expander.c, cong-util.c, plugin-convert-case.c
+
+	Casting away constness for fix a slew of warnings.
+
 2003-12-16  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-editor-widget3.c
